# RInteractionTest

./: CMakeLists.txt
src/: CMakeLists.txt  RInteraction.cpp  RInteraction.h
src/samples/: SampleGenerator.cpp  SampleGenerator.h
test/: CMakeLists.txt
test/tests/: CMakeLists.txt  SampleGenerationTest.cpp
